# nerdtown

./: README.md  andy.py  poetryreadme.md  pyproject.toml
main/advanced-examples/: enhanced-data.py
main/advanced-examples/guessing-game/: guessing-game.py
main/advanced-examples/lambda/: lambda.py
main/advanced-examples/modules/: alphabet.py  data.py  selection.py
main/getting-started/: hello-world.py  jasons.py
main/getting-started/importing/: fun.py  main.py
main/tavern-generator/: first-generator-refactor.py  first-generator.py
main/tavern-generator/tools/: percentages.py
